# cleanse.ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
app/: __init__.py  ai_recommender.py  config.py  main.py  smart_app.py  smart_app_shadcn.py
app/models/: __init__.py
app/routes/: __init__.py
app/services/: __init__.py  ai_deepseek.py  automated_cleaner.py  cleaner.py  csv_io.py  execution_engine.py  issues.py  profiler.py  report_generator.py
app/utils/: __init__.py
data/cleaned/: cleaned_healthcare_messy_data.csv  cleaned_messy_HR_data.csv  cleaned_messy_IMDB_dataset.csv  cleaned_warehouse_messy_data.csv
data/reports/: cleaned_healthcare_messy_data_report.html  cleaned_healthcare_messy_data_report.json  cleaned_messy_HR_data_report.html  cleaned_messy_HR_data_report.json  cleaned_messy_IMDB_dataset_report.html  cleaned_messy_IMDB_dataset_report.json  cleaned_warehouse_messy_data_report.html  cleaned_warehouse_messy_data_report.json
tests/: __init__.py  test_clean.py  test_pipeline.py
