[project]
name = "cleanpilot"
version = "0.1.0"
description = "Stage 1: Basic CSV cleaning pipeline (messy.csv → cleaned.csv)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0,<2",
    "pandas>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
